Добавлена стрелка для элемента левой п-ли Библиотека

--- a/Личный кабинет/index.html
+++ b/Личный кабинет/index.html
@@ -80,9 +80,12 @@
                     <div class="dropdown">
                         <div class="d-flex align-items-center left-panel-item" style="padding: 1.25rem 1rem;" id="library"
                              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+
                             <img src="img/left-panel-icon-4.svg" alt="">
+
                             <span class="fs-16 lh-20 ps-2 w-100 text-left">Библиотека</span>
 
+                            <img class="" src="img/arrow-open.svg" alt="">
                         </div>
                         <div class="dropdown-menu" id="libraryMenu" aria-labelledby="library">
                             <div class="d-flex align-items-center left-panel-item dropdown-item" style="padding: 1.25rem 1rem;" id="working-with-publications">
