Добавлена стрелка для элемента левой п-ли Библиотека

--- a/Личный кабинет/index.html
+++ b/Личный кабинет/index.html
@@ -80,9 +80,12 @@
                     <div class="dropdown">
                         <div class="d-flex align-items-center left-panel-item" style="padding: 1.25rem 1rem;" id="library"
                              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+
                             <img src="img/left-panel-icon-4.svg" alt="">
+
                             <span class="fs-16 lh-20 ps-2 w-100 text-left">Библиотека</span>
 
+                            <img class="arrow" src="img/library-arrow.svg" alt="">
                         </div>
                         <div class="dropdown-menu" id="libraryMenu" aria-labelledby="library">
                             <div class="d-flex align-items-center left-panel-item dropdown-item" style="padding: 1.25rem 1rem;" id="working-with-publications">
@@ -993,12 +996,12 @@
                                         <div class="row g-4 pt-36">
                                             <div class="col-xl-3 col-md-6">
                                                 <label class="fw-600 fs-16" for="summary-of-books-start-date">Начало периода</label>
-                                                <input type="text" id="summary-of-books-start-date" class="form-control fs-14 br-1 mt-12"
+                                                <input type="date" id="summary-of-books-start-date" class="form-control fs-14 br-1 mt-12"
                                                        placeholder="Введите дату">
                                             </div>
                                             <div class="col-xl-3 col-md-6">
                                                 <label class="fw-600 fs-16" for="summary-of-books-end-date">Конец периода</label>
-                                                <input type="text" id="summary-of-books-end-date" class="form-control fs-14 br-1 mt-12"
+                                                <input type="date" id="summary-of-books-end-date" class="form-control fs-14 br-1 mt-12"
                                                        placeholder="Введите дату">
                                             </div>
                                             <div class="col-xl-6">
@@ -2656,13 +2659,13 @@
                                         <div class="row g-4 pt-36">
                                             <div class="col-xl-3 col-md-6">
                                                 <label class="fw-600 fs-16" for="report-on-excluded-publications-start-date">Начало периода</label>
-                                                <input type="text" id="report-on-excluded-publications-start-date" class="form-control fs-14 br-1 mt-12"
+                                                <input type="date" id="report-on-excluded-publications-start-date" class="form-control fs-14 br-1 mt-12"
                                                        placeholder="Введите дату">
                                             </div>
 
                                             <div class="col-xl-3 col-md-6">
                                                 <label class="fw-600 fs-16" for="report-on-excluded-publications-end-date">Конец периода</label>
-                                                <input type="text" id="report-on-excluded-publications-end-date" class="form-control fs-14 br-1 mt-12"
+                                                <input type="date" id="report-on-excluded-publications-end-date" class="form-control fs-14 br-1 mt-12"
                                                        placeholder="Введите дату">
                                             </div>
 
